--- a/bichochic-android/app/src/main/res/values/strings.xml
+++ b/bichochic-android/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">Eshopcommerce</string>
+        <string-array name="species_array">
+            <item>Cão</item>
+            <item>Gato</item>
+            <item>Pássaro</item>
+        </string-array>
+    <string-array name="size_array">
+        <item>P</item>
+        <item>M</item>
+        <item>G</item>
+        <item>GG</item>
+    </string-array>
+    <string-array name="category_array">
+        <item>Banho-Tosa</item>
+        <item>Cuidados</item>
+        <item>Brinquedo</item>
+        <item>Outros</item>
+    </string-array>
 </resources>
